# rdict

./: Cargo.toml  README.md
assets/: en_example.json  test.py  zh_example.json
src/: archive_reader.rs  main.rs  online_search.rs  test.html
