[package]
name = "rdict"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
regex = "1.10.5"
scraper = "0.19.0"
tokio = "1.38.0"
select = "0.6.0"
flate2 = "1.0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
